Fix spacing of cards in book display

--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -52,9 +52,7 @@
 
 .card {
   text-align: initial;
-  margin-top: 0;
-  margin-bottom: 5rem;
-
+  margin: 0 5px 50px;
   width: 20rem;
 
 }
